--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,21 @@
+2001-11-15  Kazu Hirata  <kazu@hxi.com>
+
+	* config/rs6000/aix31.h: Fix comment formatting.
+	* config/rs6000/beos.h: Likewise.
+	* config/rs6000/darwin.h: Likewise.
+	* config/rs6000/eabi.asm: Likewise.
+	* config/rs6000/linux.h: Likewise.
+	* config/rs6000/linux64.h: Likewise.
+	* config/rs6000/lynx.h: Likewise.
+	* config/rs6000/netbsd.h: Likewise.
+	* config/rs6000/rs6000.c: Likewise.
+	* config/rs6000/rs6000.h: Likewise.
+	* config/rs6000/rs6000.md: Likewise.
+	* config/rs6000/sol2.h: Likewise.
+	* config/rs6000/tramp.asm: Likewise.
+	* config/rs6000/xcoff.h: Likewise.
+	* config/rs6000/xm-beos.h: Likewise.
+
 2001-11-14  Alan Matsuoka  <alanm@redhat.com>
 
 	* rtl.def (INCLUDE) : Define.  
