cp: 	PR g++/3154 	* init.c (sort_base_init): Remove unreachable code. 	(expand_member_init): Adjust comment to reflect reality. Simplify 	and remove unreachable code. testsuite: 	* g++.dg/other/init1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47047 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR g++/3154
+	* init.c (sort_base_init): Remove unreachable code.
+	(expand_member_init): Adjust comment to reflect reality. Simplify
+	and remove unreachable code.
+
 2001-11-15  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-tree.h (init_reswords, cxx_init_decl_processing): New.
