--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/init1.C: New test.
+
 2001-11-14  Geoffrey Keating  <geoffk@redhat.com>
 
 	* gcc.dg/noncompile/920923-1.c: xstormy16 produces an extra error
