--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20011114-4.c: New test.
+
 2001-11-15  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/init1.C: New test.
