* config/ia64/ia64.c (ia64_adjust_cost): Handle SUBREGs.
	* gcc.c-torture/compile/20011114-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47049 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -10,6 +10,8 @@
 	* ifcvt.c (dead_or_predicable): Return TRUE if squeeze_notes doesn't
 	find any real instructions.
 
+	* config/ia64/ia64.c (ia64_adjust_cost): Handle SUBREGs.
+
 2001-11-15  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-common.c: Include c-lex.h.
