--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,6 @@
 2001-11-15  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.c-torture/compile/20011114-2.c: New test.
 	* gcc.c-torture/compile/20011114-4.c: New test.
 
 2001-11-15  Nathan Sidwell  <nathan@codesourcery.com>
