--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-15  Richard Hodson  <hodsonr@dionecorp.com>
+
+	* config/h8300/h8300.c (dosize): Avoid corrupting R3 in interrupt
+	routines.
+
 2001-11-15  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* fix-header.c (read_scan_file): Update.
